[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "signal_tools"
version = "0.1.0"
description = "A package for signal and harmonic analysis"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["."]